--- a/ios/RideApp/Info.plist
+++ b/ios/RideApp/Info.plist
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>myapp</string>
-          <string>com.eco.rideapp</string>
+          <string>com.fankarwanta.rideapp</string>
         </array>
       </dict>
       <dict>
