--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-leaflet-view": "^1.1.2",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
