--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ android {
 }
 
 dependencies {
+    implementation "com.google.android.gms:play-services-maps:18.1.0"
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
