--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Ride App",
+    "name": "PediSmart",
     "slug": "rideapp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/ecoride_logo1.png",
+    "icon": "./src/assets/images/pedismart_logo.png",
     "scheme": "myapp",
     "newArchEnabled": true,
     "userInterfaceStyle": "automatic",
@@ -29,7 +29,7 @@
       "package": "com.fankarwanta.rideapp",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/images/ecoride_logo1.png",
+        "foregroundImage": "./src/assets/images/pedismart_logo.png",
         "backgroundColor": "#ffffff"
       },
       "permissions": [
