Replace Android app icons with PediSmart logo

--- a/ios/PediSmart.xcodeproj/xcshareddata/xcschemes/PediSmart.xcscheme
+++ b/ios/PediSmart.xcodeproj/xcshareddata/xcschemes/PediSmart.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RideApp.app"
-               BlueprintName = "RideApp"
-               ReferencedContainer = "container:RideApp.xcodeproj">
+               BuildableName = "PediSmart.app"
+               BlueprintName = "PediSmart"
+               ReferencedContainer = "container:PediSmart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RideAppTests.xctest"
-               BlueprintName = "RideAppTests"
-               ReferencedContainer = "container:RideApp.xcodeproj">
+               BuildableName = "PediSmartTests.xctest"
+               BlueprintName = "PediSmartTests"
+               ReferencedContainer = "container:PediSmart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RideApp.app"
-            BlueprintName = "RideApp"
-            ReferencedContainer = "container:RideApp.xcodeproj">
+            BuildableName = "PediSmart.app"
+            BlueprintName = "PediSmart"
+            ReferencedContainer = "container:PediSmart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RideApp.app"
-            BlueprintName = "RideApp"
-            ReferencedContainer = "container:RideApp.xcodeproj">
+            BuildableName = "PediSmart.app"
+            BlueprintName = "PediSmart"
+            ReferencedContainer = "container:PediSmart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
